# telomerediff

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yml
src/telomerediff/: __init__.py  cli.py  engine.py  io.py  report.py  visualize.py
src/teloscan/: __init__.py  cli.py  engine.py  io.py  repeats.py  report.py  visualize.py
tests/: test_basic.py
tests/data/: sample.fastq
